Add the Polls (tutor) app

--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 # DEMO: Using Virtual Machines for development
 
-Steps:
+## How to run the app
 1. Install [VirtualBox](https://www.virtualbox.org/)
 2. install [Vagrant](https://developer.hashicorp.com/vagrant)
 3. Run `vagrant up --provision`
-4. Run `vagrant ssh -c "cd /vagrant/vmdemo && .env/bin/python3 manage.py runserver 0.0.0.0:8000"`
+4. Run `vagrant ssh -c "cd /vagrant/vmdemo && .env/bin/python3 manage.py createsuperuser"`
+5. Run `vagrant ssh -c "cd /vagrant/vmdemo && .env/bin/python3 manage.py runserver 0.0.0.0:8000"`
+6. Open http://127.0.0.1:8000/admin
