Update README on how to access the DB

--- a/README
+++ b/README
@@ -7,3 +7,7 @@
 4. Run `vagrant ssh -c "cd /vagrant/vmdemo && .env/bin/python3 manage.py createsuperuser"`
 5. Run `vagrant ssh -c "cd /vagrant/vmdemo && .env/bin/python3 manage.py runserver 0.0.0.0:8000"`
 6. Open http://127.0.0.1:8000/admin
+
+## How to access the DB
+Run `vagrant ssh -c "psql -U vmdemo -h 127.0.0.1 -d vmdemo"`
+Enter `vmdemo` as a password.
